--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-router-flux": "^4.3.1"
+    "react-native": "0.72.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
